# RosPointCloud

./: CMakeLists.txt  package.xml  testUploadFile.txt
include/mynode/: duckfinder.h  main.h  pclwrapper.h  pointcloudodom.h
src/: duckfinder.cpp  main.cpp  pclwrapper.cpp  pointcloudodom.cpp
test/: mainlaunch.py
test/config/: ukf.yaml  ukf2.yaml
